2008-08-03  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Values() method.
	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
	  - (elemIndex)   .IndexOf<S>(IEnumerable<S>, S)
	  -               .IndexOfAny<S>(IEnumerable<S>, params S[])
	  -               .IndexOfAny<S>(IEnumerable<S>, IEnumerable<S>)
	  - (elemIndices) .IndicesOf<S>(IEnumerable<S>, S)
	  -               .IndicesOfAny<S>(IEnumerable<S>, params S[])
	  -               .IndicesOfAny<S>(IEnumerable<S>, IEnumerable<S>)
	  - (findIndex)   .FindIndex<S>(IEnumerable<S>, Func<S,bool>)
	  - (findIndices) .FindIndices<S>(IEnumerable<S>, Func<S,bool>)

2008-07-29  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Predicate() method.
	* IEnumerable.cs: Add .ToTuple() from Tuple.cs; add Haskell-inspired method:
	  - (partition) .Partition<S>(IEnumerable<S>, Func<S,bool>)
	* Tuple.cs: Move TupleExtensions.ToTuple() to IEnumerableRocks.

2008-07-26  Jonathan Pryor  <jpryor@novell.com>

	* Tuple.cs: Change extension method parameters names to `self` for
	  consistency; improve parameter checking, exception types & messages.
	* Tuples.cs: Add static Tuple.MaxValues readonly field, so that external
	  code can determine the maximum number of supported Tuple values.  This is
	  used by TuplesTest.ToTuple_TooManyValues().

2008-07-25  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add more Haskell-inspired extension methods:
	  - (splitAt) .SplitAt<S>(IEnumerable<S>, int)
		- (span) .Span<S>(IEnumerable<S>, Func<S, bool>)
		- (break) .Break<S>(IEnumerable<S>, Func<S, bool>)
		- (stripPrefix) .SkipPrefix<S>(IEnumerable<S>, IEnumerable<S>)
		- (group) .HaskellGroup<S>(IEnumerable<S>)
		- (inits) .InitialSegments<S>(IEnumerable<S>)
		- (tails) .TrailingSegments<S>(IEnumerable<S>)
		- (groupBy) .HaskellGroupBy<S>(IEnumerable<S>, Func<S,S,bool>)

2008-07-25  Jonathan Pryor  <jpryor@novell.com>

	* KeyValuePair.cs: Remove KeyValuePair type.