@@ -1,3 +1,7 @@
+2008-08-04  Jonathan Pryor  <jpryor@novell.com>
+
+	* IEnumerableTest.cs: Add tests for .Zip() and .Unzip() (+ overloads).
+
 2008-08-03  Jonathan Pryor  <jpryor@novell.com>
 
 	* IEnumerableTest.cs: Add tests for .IndexOf(), .IndexOfAny(), .IndicesOf(),
